--- a/src/App.css
+++ b/src/App.css
@@ -4,14 +4,14 @@
   width: 100vw;
   height: 100vh;
   display: flex;
-  overflow-x: hidden;
+  overflow-x: hidden !important;
   padding: 0 1.5rem 0 0.5rem;
 }
 
 /* For WebKit browsers (Chrome, Safari) */
 ::-webkit-scrollbar {
   width: 8px; /* Adjust the width as needed */
-  background: transparent;
+  background-color: transparent;
 }
 
 ::-webkit-scrollbar-thumb {
@@ -21,11 +21,13 @@
 
 ::-webkit-scrollbar-thumb:hover {
   background-color: #555; /* Darker color on hover */
+  cursor: pointer;
 }
 
 ::-webkit-scrollbar-track {
-  background: transparent; /* Background color of the track */
+  background-color: rgb(9, 9, 10)
 }
+
 
 
 @media screen and (max-width: 480px) {
